infrastructure/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlops-service
  labels:
    app: mlops
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
  selector:
    app: mlops
